Fixed the Twitter link and fixed the image alignment to prevent emoji problems.

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -201,8 +201,8 @@ blockquote p:last-child {
 }
 
 img {
-  display: block;
-  margin: 0 0 1rem;
+  display: inline;
+  margin: 0 0 0.3rem;
   border-radius: 5px;
 }
 
